force-app/main/default/objects/vlocity_cmt__IntegrationRetryPolicy__c/vlocity_cmt__IntegrationRetryPolicy__c.object-meta.xml
<CustomObject>
    <label>Integration Retry Policy</label>
    <nameField>
        <label>Integration Retry Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Retry Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>