force-app/main/default/objects/vlocity_cmt__IntegrationRetryPolicy__c/fields/vlocity_cmt__MaximumNumberOfRetries__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__MaximumNumberOfRetries__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Maximum number of retries</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>