force-app/main/default/objects/vlocity_cmt__IntegrationRetryPolicy__c/recordTypes/vlocity_cmt__MonotonousForeverRetryPolicy.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__MonotonousForeverRetryPolicy</fullName>
    <active>true</active>
    <label>Monotonous Forever Retry Policy</label>
</RecordType>