force-app/main/default/objects/vlocity_cmt__IntegrationRetryPolicy__c/recordTypes/vlocity_cmt__MonotonousRetryPolicy.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__MonotonousRetryPolicy</fullName>
    <active>true</active>
    <label>Monotonous Retry Policy</label>
</RecordType>