force-app/main/default/objects/vlocity_cmt__IntegrationRetryPolicy__c/recordTypes/vlocity_cmt__NoRetryPolicy.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__NoRetryPolicy</fullName>
    <active>true</active>
    <label>No Retry Policy</label>
</RecordType>