force-app/main/default/objects/vlocity_cmt__IntegrationRetryPolicy__c/recordTypes/vlocity_cmt__StaggeredRetryPolicy.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__StaggeredRetryPolicy</fullName>
    <active>true</active>
    <label>Staggered Retry Policy</label>
</RecordType>