force-app/main/default/objects/vlocity_cmt__IntegrationRetryPolicy__c/validationRules/vlocity_cmt__MaximumNumberOfRetriesValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_cmt__MaximumNumberOfRetriesValidation</fullName>
    <active>true</active>
    <description>MaximumNumberOfRetries field validation</description>
    <errorConditionFormula>NOT(vlocity_cmt__MaximumNumberOfRetries__c &gt;= 0)</errorConditionFormula>
    <errorDisplayField>vlocity_cmt__MaximumNumberOfRetries__c</errorDisplayField>
    <errorMessage>Maximum Number Of Retries cannot be a negative number.</errorMessage>
</ValidationRule>