force-app/main/default/objects/vlocity_cmt__IntegrationRetryPolicy__c/validationRules/vlocity_cmt__RetryIntervalsValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_cmt__RetryIntervalsValidation</fullName>
    <active>true</active>
    <description>Retry Intervals field validation</description>
    <errorConditionFormula>AND(NOT(ISBLANK(vlocity_cmt__RetryIntervals__c)), NOT(REGEX(vlocity_cmt__RetryIntervals__c, &quot;(\\d+)(,\\s*\\d+)*&quot;)))</errorConditionFormula>
    <errorDisplayField>vlocity_cmt__RetryIntervals__c</errorDisplayField>
    <errorMessage>Retry Intervals must be whole numbers separated by commas.</errorMessage>
</ValidationRule>