force-app/main/default/objects/vlocity_cmt__IntegrationRetryPolicy__c/validationRules/vlocity_cmt__TimeBetweenRetriesValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_cmt__TimeBetweenRetriesValidation</fullName>
    <active>true</active>
    <description>TimeBetweenRetries field validation</description>
    <errorConditionFormula>NOT(vlocity_cmt__TimeBetweenRetries__c &gt;= 0)</errorConditionFormula>
    <errorDisplayField>vlocity_cmt__TimeBetweenRetries__c</errorDisplayField>
    <errorMessage>Time Between Retries cannot be a negative number.</errorMessage>
</ValidationRule>